# programowanie-rozproszone

pr-lab1/: CMakeLists.txt  main-pthread-bad.c  main-pthread.c  main.c
pr-lab2/: CMakeLists.txt
pr-lab2/src/: CMakeLists.txt  list.c  main.c  workers.c
pr-lab2/src/include/: list.h  workers.h
pr-lab3/: CMakeLists.txt
pr-lab3/src/: CMakeLists.txt  list.c  main.c  task.c  worker.c  workers.c
pr-lab3/src/include/: list.h  task.h  workers.h
pr-lab4/lab-win-client/: lab-win-client.sln
pr-lab4/lab-win-client/lab-win-client/: client.c  lab-win-client.vcxproj  lab-win-client.vcxproj.filters
pr-lab4/lab-win-client/lab-win-client/x64/Debug/: lab-win-client.exe.recipe  lab-win-client.ilk  vc143.idb
pr-lab4/lab-win-client/lab-win-client/x64/Debug/lab-win-client.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
pr-lab4/lab-win-server/: lab-win-server.sln
pr-lab4/lab-win-server/lab-win-server/: lab-win-server.vcxproj  lab-win-server.vcxproj.filters  server.c
pr-lab4/lab-win-server/lab-win-server/x64/Debug/: lab-win-server.exe.recipe  lab-win-server.ilk  vc143.idb
pr-lab4/lab-win-virus/: lab-win-virus.sln
pr-lab4/lab-win-virus/lab-win-virus/: lab-win-virus.vcxproj  lab-win-virus.vcxproj.filters  virus.cpp
pr-lab4/lab-win-virus/lab-win-virus/x64/Debug/: lab-win-virus.exe.recipe  lab-win-virus.ilk  vc143.idb
pr-lab7/: pom.xml
pr-lab7/src/main/java/: main.java
pr-lab7/src/main/java/Classes/: Agent.java  Node.java  Queue.java
pr-proj/: go.mod  go.sum
pr-proj/cmd/client/: client.go
pr-proj/cmd/client/test/: pixel.go
pr-proj/cmd/server/: server.go
(+15 files in other folders)
